<resources>
    // Application
    <string name="app_name">Coach Notes</string>

    // Constant data
        // Relatives
        <string name="mother">Мама</string>
        <string name="father">Отец</string>
        <string name="grandMa">Бабушка</string>
        <string name="grandFa">Дедушка</string>
        <string name="aunt">Тётя</string>
        <string name="uncle">Дядя</string>
        <string name="sister">Сестра</string>
        <string name="brother">Брат</string>

        // Coach types
        <string name="coach_role_choreographer_coach">Хореограф</string>
        <string name="coach_role_common_coach">Тренер</string>
        <string name="coach_role_sport_master_coach_">Инструктор по спорту</string>
        <string name="coach_role_custom">Другое…</string>

    // Permissions
    <string name="permission_external_storage_rationale">Чтобы иметь возможность генерировать файлы, нужно разрешение</string>
    <string name="permission_external_storage_rationale_dialog_title">RationaleTitle</string>
    <string name="permission_external_storage_rationale_dialog_message">RationaleMessage</string>
    <string name="permission_external_storage_settings_dialog_title">SettingsTitle</string>
    <string name="permission_external_storage_settings_dialog_message">SettingsMessage</string>

    // Folders and files
    <string name="coachNotesSubdirectoryName">Тренерские журналы</string>

    // Common
    <string name="menu">Меню</string>
    <string name="group">Группа</string>
    <string name="groups">Группы</string>
    <string name="people">Ученики</string>
    <string name="journal">Журнал</string>
    <string name="age_type_absolute">г.р</string>
    <string name="age_type_relative">лет</string>
    <string name="edit">Редактировать</string>
    <string name="create">Создать</string>
    <string name="save">Сохранить</string>
    <string name="required_helper">* обязательно</string>
    <string name="general">Основное</string>
    <string name="phone">Телефон</string>
    <string name="available_soon">Еще не готово</string>
    <string name="no_data">Нет данных</string>
    <string name="today">Сегодня</string>
    <string name="not_found">Не найдено</string>

    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="birthday">День Рождения</string>
    <string name="birthday_with_helper">День Рождения (дд.мм.гггг)</string>
    <string name="parents">Родители</string>
    <string name="full_name">ФИО</string>
    <string name="tags">Особенности</string>
    


    // Bottom nav menu
    <string name="main_bottom_nav">Главная</string>
    <string name="groups_bottom_nav">Группы</string>
    <string name="people_bottom_nav">Ученики</string>

    // Screens


    // Home screen
    <string name="home_screen_my_schedule">График занятий</string>
    <string name="home_screen_today_schedule_date">Сегодня:   %1$s, %2$d %3$s %4$d</string>
        // Samples
        <string name="home_screen_sample_name">Кондратьев Александр</string>
        <string name="home_screen_sample_position">Тренер</string>
        <string name="home_screen_sample_today_date">Сегодня: 01 января 2020</string>
        <string name="home_screen_group_count_sample">5</string>
        <string name="home_screen_people_count_sample">38</string>


    // Add new group screen
    <string name="new_group_screen_group_name_label">Название</string>
    <string name="new_group_screen_members_label">Участники</string>


    // Groups screen
    <string name="groups_screen_toolbar_no_count_title">Мои группы</string>
    <string name="groups_screen_toolbar_with_count_title">Мои группы: %1$d</string>
    <string name="groups_screen_no_data">Нет групп</string>
        // Samples
        <string name="groups_screen_toolbar_subtitle_sample">5 шт</string>

    // Group info screen
    <string name="group_info_screen_toolbar_title">Профиль группы</string>

    // Group edit screen
    <string name="group_edit_screen_toolbar_title">Редактор группы</string>
    <string name="group_edit_screen_toolbar_new_title">Новая группа</string>
    <string name="group_edit_screen_delete_group">Удалить группу</string>
    <string name="group_edit_screen_age_type">Возраст</string>
    <string name="group_edit_screen_no_schedule_title">Расписание не выбрано</string>
    <string name="group_edit_screen_no_schedule_message">Группа не будет отображаться в расписании на главном экране</string>
    <string name="group_edit_screen_no_schedule_force_create_button">Всё равно создать</string>
    <string name="group_edit_screen_no_schedule_force_update_button">Всё равно сохранить</string>
    <string name="group_edit_screen_no_schedule_cancel">Отмена</string>

    // Group journal screen
        // Samples
        <string name="group_journal_screen_date_sample">Март 2020</string>

    // Persons screen
    <string name="persons_screen_toolbar_no_count_title">Мои ученики</string>
    <string name="persons_screen_toolbar_with_count_title">Мои ученики: %1$d</string>
    <string name="person_full_name_pattern">%1$s %2$s</string>
    <string name="persons_screen_no_data">Нет учеников</string>

    // Person info screen
    <string name="person_info_screen_toolbar_title">Профиль ученика</string>

    // Person edit screen
    <string name="person_edit_screen_no_group">Нет группы</string>
    <string name="person_edit_screen_toolbar_title">Редактор ученика</string>
    <string name="person_edit_screen_toolbar_new_title">Новый ученик</string>
    <string name="person_edit_screen_delete_person">Удалить ученика</string>
    <string name="person_edit_birthday_title_short">год рождения</string>
    <string name="person_edit_birthday_year_full">год</string>
    <string name="person_edit_birthday_month_full">месяц</string>
    <string name="person_edit_birthday_day_full">день</string>
    <string name="person_edit_screen_group_pattern_range">%1$s (%2$s - %3$s г.р) | %4$d чел.</string>
    <string name="person_edit_screen_group_pattern_single">%1$s (%2$s г.р) | %3$d чел.</string>
    <string name="person_edit_screen_relative_age_pattern">%1$s лет</string>

    // Items

        // Previews

            // Preview group
            <string name="group_absolute_age_range_pattern">%1$s-%2$s г.р</string>
            <string name="group_absolute_age_single_pattern">%1$s г.р</string>
            <string name="group_relative_age_range_pattern">%1$s-%2$s\nлет</string>
            <string name="group_relative_age_single_pattern">%1$s\nлет</string>
                // Samples
                <string name="preview_group_name_sample">Группа #1</string>
                <string name="preview_group_group_size_sample">24</string>
                <string name="preview_group_people_ages_absolute_sample">2013–2014 г.р</string>
                <string name="preview_group_people_ages_relative_sample">7–8\nлет</string>

            // Preview person
                // Samples
                <string name="preview_person_name_sample">Вася Иванов</string>
                <string name="preview_person_group_name_sample">Группа #1</string>

        // Elements

            // Group param element
            <string name="group_param_payment_method">Тип оплаты</string>
            <string name="group_param_payment_free">Бесплатная</string>
            <string name="group_param_payment_paid">Платная</string>
            <string name="group_param_supported_age">Возраст учеников</string>
            <string name="group_param_ages_single">%s</string>
            <string name="group_param_ages_multiple">%s - %s</string>
            <string name="group_param_schedule">Расписание занятий</string>
                // Samples
                <string name="group_param_age1_sample">2007</string>
                <string name="group_param_age2_sample">2008</string>

            // Group members element
            <string name="group_members_people">Ученики:</string>
            <string name="group_members_see_all">Полный список</string>
            <string name="group_members_add_people">Добавить ученика</string>
                // Samples
                <string name="group_members_people_count_sample">21</string>

            // Person header element
            <string name="person_info_header_name_surname_pattern">%1$s %2$s</string>
            <string name="person_info_header_age_pattern">%1$s (%2$d лет)</string>
            <string name="person_info_header_age_only_year_pattern">%1$d г.р</string>
                // Samples
                <string name="person_header_name_surname_sample">Иван Иванович</string>
                <string name="person_header_patronymic_sample">Иванов</string>
                <string name="person_header_age_sample">12 лет</string>
                <string name="person_header_group_sample">Группа #1</string>

            // Person params element
            <string name="person_params_common_tab">Общее</string>
            <string name="person_params_physical_tab">Физ</string>
            <string name="person_params_sport_tab">Спорт</string>
            <string name="person_params_med_tab">Мед</string>

            // Person parent info element
            <string name="person_parent_info_label">Ответственные лица</string>


            // Single parent info element
            <string name="parent_info_add_parent">Добавить родственника</string>
                // Samples
                <string name="single_parent_info_full_name_sample">Наталия Григорьевна</string>
                <string name="single_parent_info_type_sample">Мама</string>
                <string name="single_parent_info_phone_sample">+7(920)123–45–67</string>

            // Journal column header
                // Samples
                <string name="journal_column_header_date_sample">22</string>
                <string name="journal_column_header_day_of_week_sample">Пн</string>

            // Journal column header
                // Samples
                <string name="journal_row_header_surname_sample">Иванов</string>
                <string name="journal_row_header_name_sample">Иван</string>

            // Universal toolbar
            <string name="universal_toolbar_title">Заголовок</string>
            <string name="universal_toolbar_subtitle">Подзаголовок</string>

</resources>
