<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/general"
        android:textSize="@dimen/default_subtitle_text_size" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_indent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/default_indent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            app:helperText="@string/required_helper"
            app:helperTextTextColor="@color/colorAccent"
            app:hintTextColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPersonEditTextSurname"
                style="@style/CustomInputTypeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:helperText="@string/required_helper"
            app:helperTextTextColor="@color/colorAccent"
            app:hintTextColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="@id/textInput1"
            app:layout_constraintStart_toStartOf="@id/textInput1"
            app:layout_constraintTop_toBottomOf="@+id/textInput1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPersonEditTextName"
                style="@style/CustomInputTypeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editPersonTextContainerPatronymic"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="@dimen/default_indent"
            app:hintTextColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/textInput2"
            app:layout_constraintStart_toStartOf="@id/textInput2"
            app:layout_constraintTop_toBottomOf="@+id/textInput2"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPersonEditTextPatronymic"
                style="@style/CustomInputTypeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/patronymic"
                tools:visibility="visible" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>