<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/colorPrimaryDarkHighlight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_indent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/single_parent_info_full_name_sample"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/single_parent_info_type_sample"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_call"
                android:drawablePadding="16dp"
                android:gravity="start|center_vertical"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/single_parent_info_phone_sample"
                android:textSize="18sp"
                app:drawableTint="@color/colorAccent" />

            <ImageButton
                android:id="@+id/imageButton5"
                style="@style/TransparentBackgroundImageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/default_indent"
                android:paddingEnd="@dimen/default_indent"
                android:tint="@color/colorAccent"
                app:srcCompat="@drawable/ic_message" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>