<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        app:errorEnabled="true"
        app:helperText="@string/required_helper"
        app:helperTextTextColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/coachBaseParamEditTextSurname"
            style="@style/CustomInputTypeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        app:helperText="@string/required_helper"
        app:helperTextTextColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/coachBaseParamEditTextName"
            style="@style/CustomInputTypeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        app:helperText="@string/required_helper"
        app:helperTextTextColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/coachBaseParamEditTextPatronymic"
            style="@style/CustomInputTypeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patronymic" />
    </com.google.android.material.textfield.TextInputLayout>

    <ru.hryasch.coachnotes.common.view.HideKeyboardSpinner
        android:id='@+id/coachBaseParamSpinnerRole'
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Ваша должность"
        app:boxBackgroundMode="outline"
        app:hintTextColor="@color/colorAccent"
        app:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/coachBaseParamEditTextCustomRole"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/fake_outlined"
        android:ems="10"
        android:hint="Введите должность"
        android:inputType="textPersonName"
        android:paddingStart="11dp"
        android:paddingEnd="15dp" />
</LinearLayout>